resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;


body {
    overflow-x: hidden;
}

.poof-input {
    background-color: #0b0b0b;
    border: 1px solid #2a2a2a;
    color: #f5f5f5;
    border-radius: 12px;
    padding: 12px 14px;
}

.poof-input::placeholder {
    color: #8a8a8a;
}

.poof-input:focus {
    outline: none;
    border-color: #facc15; /* yellow-400 */
}


.poof-date {
    background-color: #0b0b0b;
    border: 1px solid #2a2a2a;
    color: #f5f5f5;
    border-radius: 12px;
    padding: 14px 16px;
}

.poof-date::-webkit-calendar-picker-indicator {
    filter: invert(88%) sepia(79%) saturate(749%) hue-rotate(356deg);
    cursor: pointer;
    transform: scale(1.6);
    opacity: 1;
}

.poof-date:focus {
    outline: none;
    border-color: #facc15;
}

.grid-cols-4 { grid-template-columns: repeat(4,minmax(0,1fr)) }
.pb-28 { padding-bottom: 7rem }
.pb-32 { padding-bottom: 8rem }
.z-50 { z-index: 50 }

/* Bottom navigation separation */
.bottom-nav {
    border-top: 1.5px solid rgba(0, 0, 0, 0.7);
    box-shadow: 0 -4px 14px rgba(0, 0, 0, 0.45);
}

.bottom-2 {
    bottom: .85rem;
}

/* Leaflet must stay BELOW UI */
.leaflet-pane,
.leaflet-control {
    z-index: 10 !important;
}

.leaflet-top,
.leaflet-bottom {
    z-index: 20 !important;
}
/* hide horizontal scrollbar */
.no-scrollbar {
    scrollbar-width: none;        /* Firefox */
    -ms-overflow-style: none;     /* IE / Edge */
}
.no-scrollbar::-webkit-scrollbar {
    display: none;                /* Chrome / Safari */
}

.cropper-container,
.cropper-canvas,
.cropper-wrap-box,
.cropper-drag-box {
    width: 100% !important;
    height: 100% !important;
}

/* Когда открыт любой bottom-sheet */
html.sheet-open nav.fixed.bottom-0 {
    transform: translateY(100%);
    pointer-events: none;
    transition: transform .25s ease;
}
@keyframes logo-pop {
    0% {
        transform: scale(0.85);
        opacity: 0;
    }
    100% {
        transform: scale(1);
        opacity: 1;
    }
}

.poof-marker {
  /*width: 42px;
  height: 42px;
  border-radius: 50%;
  background: #facc15; */
  display: flex;
  align-items: center;
  justify-content: center;
  /*border: solid 1px #000;*/

 /* box-shadow:
    0 0 0 4px rgba(0,0,0,.15),
    0 6px 16px rgba(0,0,0,.35);

  transition: box-shadow .2s ease, transform .2s ease;*/
}

/* exact — подтверждённая точка */
.poof-marker.exact {
 /* box-shadow:
    0 0 0 4px rgba(250,204,21,.55), 
    0 0 0 10px rgba(250,204,21,.25), 
    0 8px 18px rgba(0,0,0,.45);*/

  transform: scale(1.05);
}

.poof-marker img {
  width: 42px;
  height: 42px;
  pointer-events: none;

}


/* Leaflet + Tailwind fix */
.leaflet-container {
  width: 100%;
  height: 100%;
  background: transparent !important;
}

.leaflet-container img.leaflet-tile {
  max-width: none !important;
  max-height: none !important;
}
.modal-body {
    max-height: 70vh;
    overflow-y: auto;
}



#map {
    height: 100%;
    width: 100%;
}

input,
textarea,
select {
    font-size: 16px;
}

